--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -209,6 +209,7 @@ section.success {
 }
 #portfolio .portfolio-item .portfolio-link .caption {
   background: rgba(24, 188, 156, 0.9);
+  border-radius: 10%;
   position: absolute;
   width: 100%;
   height: 100%;
